# Gemini-CUA

./: .env.example  .gitignore  CONTEXT.md  Plan.md  README.md  pyproject.toml  skills-lock.json
client/: __main__.py  main.py  router.py
client/action/: executor.py  keyboard.py  mouse.py
client/live/: audio.py  screen.py  session.py  tools.py
client/perception/: accessibility.py  screenshot.py
client/safety/: guard.py
client/ui/: overlay.html  overlay.py
client/utils/: config.py  coordinates.py  logger.py  permissions.py
client/voice/: hotkey.py  overlay.py  stt.py  tts.py
server/: main.py
server/mac_agent/: agent.py
